tests/rosetta/out/Pascal/anti-primes.error
fpc: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /tmp/anti-primes.pas
anti-primes.pas(16,12) Error: Incompatible types: got "ShortInt" expected "<procedure variable type of function(Variant):LongInt is nested;Register>"
anti-primes.pas(23,13) Error: Incompatible types: got "<procedure variable type of function(Variant):LongInt is nested;Register>" expected "LongInt"
anti-primes.pas(37,12) Error: Incompatible types: got "ShortInt" expected "<procedure variable type of function(Variant):LongInt is nested;Register>"
anti-primes.pas(40,16) Error: Operator is not overloaded: "<procedure variable type of function(Variant):LongInt is nested;Register>" < "ShortInt"
anti-primes.pas(47,22) Error: Operator is not overloaded: "<procedure variable type of function(Variant):LongInt is nested;Register>" + "ShortInt"
anti-primes.pas(51,11) Error: Identifier not found "_sliceString"
anti-primes.pas(72) Fatal: There were 6 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
